# sizes

./: .gitignore  README.md  justfile  pyproject.toml
src/sizes/: __main__.py  _util.py  cli.py  colours.py  dir.py  file.py  utils.py
