[tool.poetry]
name = "sizes"
version = "0.1.0"
description = ""
authors = ["Yuki Nagato <37764578+YUKI2eN3e@users.noreply.github.com>"]
readme = "README.md"
packages = [
	{ include = "sizes", from = "src" }
]

[tool.poetry.scripts]
sizes = "sizes.__main__:run"

[tool.poetry.dependencies]
python = "^3.10"
rich-argparse = "^1.4.0"
argcomplete = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I"]
ignore = ["E402"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"